--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "jimp": "^0.16.1"
+    "jimp": "^0.16.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.55",
